# stapi-fastapi-umbra

./: .gitignore  README.md  pyproject.toml
src/stapi_fastapi_umbra/: __dev__.py  __init__.py  backend.py  client.py  models.py  opportunities.py  products.py  settings.py
src/stapi_fastapi_umbra/stapi_fastapi/: api.py
src/stat_fastapi_umbra/: __dev__.py  backend.py  opportunities.py  parameters.py  products.py  settings.py
